@@ -12,7 +12,9 @@ New in this Isabelle version
 
 *** Isar ***
 
-* names of theorems, assumptions etc. may be natural numbers as well;
+* names of theorems etc. may be natural numbers as well;
+
+* intro/elim/dest attributes: changed ! / !! flags to ? / ??;
 
 * new 'obtain' language element supports generalized existence proofs;
 
